Separo los resumenes en dos, uno general para todas las familias y uno especifico para las familias

--- a/Front/HogueraFront/src/app/app.component.html
+++ b/Front/HogueraFront/src/app/app.component.html
@@ -2,12 +2,13 @@
 <nav class="navbar bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="">
-      Hogurea Via ParcVistahermosa
+      Hogurea Via Parc Vistahermosa
     </a>
     <div style="display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;">
+      <a class="nav-link" href="/resumenGeneral" style="margin-right: 25px;">Resumen General</a>
       <a class="nav-link" href="/resumen" style="margin-right: 25px;">Resumen</a>
       <a class="nav-link" href="/nuevafamilia">Añadir familia</a>
     </div>
