Modifico la manera de visualizar el resumen general y el resumen de familais

--- a/Front/HogueraFront/src/app/components/resumen-component/resumen.component.html
+++ b/Front/HogueraFront/src/app/components/resumen-component/resumen.component.html
@@ -61,35 +61,12 @@
             <td>{{resumen.Papeletas64}}</td>
           </tr>
         </tbody>
-      </table>
-    <!--Resumen total-->
-    <h1 style="text-align: center;">Total</h1>
-    <div class="row" style="max-width: 65rem; text-align: center;">
-        <div class="col">
-            <div class="row">
-                <h3 class="col">Total decimos 28</h3>
-                <h3>{{decimos28}}</h3>
-            </div>
-        </div>
-        <div class="col">
-            <div class="row">
-                <h3 class="col">Total papeletas 28</h3>
-                <h3>{{papeletas28}}</h3>
-            </div>
-        </div>
-    </div>
-    <div class="row" style="max-width: 65rem; text-align: center;">
-        <div class="col">
-            <div class="row">
-                <h3 class="col">Total decimos 64</h3>
-                <h3>{{decimos64}}</h3>
-            </div>
-        </div>
-        <div class="col">
-            <div class="row">
-                <h3 class="col">Total papeletas 64</h3>
-                <h3>{{papeletas64}}</h3>
-            </div>
-        </div>
-    </div>
+        <tbody>
+            <th>Total</th>
+            <td>{{decimos28}}</td>
+            <td>{{decimos64}}</td>
+            <td>{{papeletas28}}</td>
+            <td>{{papeletas64}}</td>
+        </tbody>
+    </table>
 </div>
