Termino el resumen general añadiendo el precio y el beneficio

--- a/Front/HogueraFront/src/app/app.component.html
+++ b/Front/HogueraFront/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="">
-      Hogurea Via Parc Vistahermosa
+      Hoguera Via Parc Vistahermosa
     </a>
     <div style="display: flex;
                 flex-direction: row;
